@@ -9,4 +9,3 @@ List of stuff to do:
 - Implement sanity check after saving db temp file
 - Fix compatibility with Python 3
 - Add working test suite
-- Remember window sizes, and main window split position
